# chat_rocket

./: .gitignore  Cargo.toml
src/: main.rs
src/database/: mod.rs
src/model/: mod.rs
src/routes/: authorization.rs  errors_catch.rs  is_authorization.rs  messages.rs  mod.rs
