[package]
name = "chat_rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "2.2.1", default-features = false, features = ["async-std-runtime"]}
rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_sqlite"]}
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0.0", features = ["v4"] }
tokio = "1.18.2"
chrono = "0.4"